Окно регистрации и создание аккаунта

--- a/app/src/main/res/layout/fragment_main_container.xml
+++ b/app/src/main/res/layout/fragment_main_container.xml
@@ -3,6 +3,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
+        <TextView
+            android:text="You are in Main"
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </RelativeLayout>
 </layout>
