--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -6,7 +6,7 @@
     <item android:gravity="center">
         <bitmap
             android:gravity="fill_horizontal|fill_vertical"
-            android:src="@drawable/image_decode"/>
+            android:src="@drawable/acckeeper_logo"/>
     </item>
 
 </layer-list>
