--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -1,8 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <RelativeLayout
+        android:background="@color/colorPrimary"
+        android:padding="16dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <ImageView
+            android:paddingLeft="24dp"
+            android:paddingRight="24dp"
+            android:src="@drawable/acckeeper_logo"
+            android:id="@+id/acckeper_logo"
+            android:layout_width="match_parent"
+            android:layout_height="100dp" />
+
+        <TextView
+            android:textSize="22sp"
+            android:paddingLeft="24dp"
+            android:paddingRight="24dp"
+            android:textAlignment="center"
+            android:fontFamily="sans-serif-condensed"
+            android:textColor="@android:color/white"
+            android:layout_below="@+id/acckeper_logo"
+            android:id="@+id/title_auth_reference"
+            android:text="@string/auth_welcome_reference"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_login"
+            style="@style/TextInputLayoutAuthStyle"
+            android:layout_below="@+id/title_auth_reference"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:hint="@string/login_hint"
+                android:maxEms="20"
+                style="@style/AuthEditTextFields"
+                android:id="@+id/login_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_password"
+            style="@style/TextInputLayoutAuthStyle"
+            android:layout_below="@+id/input_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:hint="@string/password_hint"
+                style="@style/AuthEditTextFields"
+                android:maxEms="8"
+                android:id="@+id/password_edit_text"
+                android:inputType="numberPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_question"
+            style="@style/TextInputLayoutAuthStyle"
+            android:layout_below="@+id/input_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:hint="@string/question_hint"
+                style="@style/AuthEditTextFields"
+                android:id="@+id/secret_question_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_answer"
+            style="@style/TextInputLayoutAuthStyle"
+            android:layout_below="@+id/input_question"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:hint="@string/answer_hint"
+                style="@style/AuthEditTextFields"
+                android:id="@+id/secret_answer_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:layout_below="@+id/input_answer"
+            android:background="@android:color/transparent"
+            android:text="@string/create_account_button_title"
+            android:textSize="18sp"
+            android:textColor="@android:color/white"
+            android:id="@+id/create_account_button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            tools:ignore="ContentDescription" />
 
     </RelativeLayout>
 </layout>
