--- a/app/src/main/res/layout/fragment_main_container.xml
+++ b/app/src/main/res/layout/fragment_main_container.xml
@@ -1,12 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <TextView
-            android:text="You are in Main"
-            android:gravity="center_vertical|center_horizontal"
+
+        <FrameLayout
+            android:background="@color/colorPrimaryLight"
+            android:id="@+id/fragment_main_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_above="@+id/bottom_navigation_view"
+            android:layout_alignParentStart="true">
+        </FrameLayout>
+
+        <android.support.design.widget.BottomNavigationView
+            android:id="@+id/bottom_navigation_view"
+            app:itemIconTint="@android:color/white"
+            app:itemTextColor="@android:color/white"
+            android:background="@color/colorPrimaryDark"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:menu="@menu/main_navigation_menu"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true">
+
+        </android.support.design.widget.BottomNavigationView>
+
     </RelativeLayout>
 </layout>
