--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@color/colorPrimary"/>
+    <item android:drawable="@color/colorPrimary" android:gravity="fill"/>
 
-    <item android:gravity="center">
+    <item android:gravity="center" >
         <bitmap
-            android:gravity="fill_horizontal|fill_vertical"
+            android:gravity="center"
             android:src="@drawable/acckeeper_logo"/>
     </item>
 
