--- a/app/src/main/res/layout/fragment_main_container.xml
+++ b/app/src/main/res/layout/fragment_main_container.xml
@@ -28,7 +28,7 @@
                 android:layout_margin="8dp"
                 android:clickable="true"
                 android:focusable="true"
-                android:src="@drawable/acckeeper_logo"
+                android:src="@drawable/ic_add"
                 app:fabSize="normal"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
         </FrameLayout>
