--- a/app/src/main/res/layout/item_edit_note.xml
+++ b/app/src/main/res/layout/item_edit_note.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <RelativeLayout
         style="@style/BackgroundStyle"
         android:layout_width="match_parent"
@@ -11,36 +12,38 @@
             style="@style/CardViewStyle">
 
             <RelativeLayout
-                android:padding="@dimen/default_normal_padding"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:padding="@dimen/default_normal_padding">
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/input_title"
                     style="@style/TextInputLayoutAuthStyle"
-                    android:hint="@string/note_title"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:hint="@string/note_title">
+
                     <EditText
 
-                        style="@style/AuthEditTextFields"
                         android:id="@+id/note_title"
+                        style="@style/AuthEditTextFields"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
                 </android.support.design.widget.TextInputLayout>
+
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/input_description"
-                    android:layout_below="@id/input_title"
                     style="@style/TextInputLayoutAuthStyle"
-                    android:hint="@string/note_description"
-
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+
+                    android:layout_below="@id/input_title"
+                    android:hint="@string/note_description">
 
                     <EditText
-                        style="@style/AuthEditTextFields"
                         android:id="@+id/note_description"
+                        style="@style/AuthEditTextFields"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
@@ -51,7 +54,8 @@
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             style="@style/FABStyle"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true" />
+            android:src="@drawable/ic_done" />
     </RelativeLayout>
 </layout>
